--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,10 @@ services:
       - 3306:3306
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
+  web:
+    build: .
+    command: bundle exec rails s -p 3000
+    ports:
+      - 3000:3000
+    links:
+      - db
